--- a/css/styles.css
+++ b/css/styles.css
@@ -11,16 +11,15 @@ ol {
 
 img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: auto;
     object-fit: cover;
 }
 
-/* 
-gallery-item 
-gallery-link 
-gallery-image 
-*/
+a {
+    display: inline-block;
+    text-decoration: none;
+}
 
 .gallery {
     max-width: 1128px;
@@ -33,4 +32,10 @@ gallery-image
 
 .gallery-item {
     flex-basis: calc((100% - 48px) / 3);
+    height: 200px;
+    overflow: hidden;
+}
+
+.gallery-item:hover {
+   transform: scale(1.04);
 }
